# ghc-openmp

./: .gitignore  LICENSE  Makefile  README.md  cabal.project  flake.nix  ghc-openmp.cabal  ghcomp.pc.in  index.md  mkdocs-multi.yml  mkdocs.yml
artifacts/: benchmark_phase2_results.md  benchmark_phase3_results.md  benchmark_phase8_dgemm_comparison.md  decision_implementation_approach.md  devlog.md  plan_ghc_openmp_exploration.md  plan_phase16_linear_zerocopy.md  plan_phase17_linear_arrays.md  plan_phase18_runtime_improvements.md  plan_phase3_optimizations.md  plan_phase4_haskell_interop.md  research_ghc_rts_internals.md  research_libgomp_abi.md  results_phase10_cmm_primitives.md  results_phase11_inline_cmm.md  results_phase12_batched_safe.md  results_phase13_crossover.md  results_phase14_par_compare.md  results_phase15_tasks.md  results_phase16_zerocopy.md  results_phase6_gc_interaction.md  results_phase7_dgemm.md  results_phase9_bidirectional.md  results_shared_memory_demos.md
cbits/: bench_overhead.c  ghc_omp_runtime_rts.c  omp_compute.c  omp_prims.cmm  omp_shared.c  test_omp_basic.c  test_omp_tasks.c  test_rts_embed.c
demos/: HsCmmBatch.hs  HsCmmDemo.hs  HsConcurrent.hs  HsCrossover.hs  HsGCStress.hs  HsInlineCmm.hs  HsMain.hs  HsMatMul.hs  HsParCompare.hs  HsSharedMem1.hs  HsSharedMem2.hs  HsSharedMem3.hs  HsSharedMem4.hs  HsSharedMem5.hs  HsTaskDemo.hs
demos/inline-cmm/: inline-cmm-demo.cabal
docs/: ChartData.hs  _config.yml  gen_charts.hs  index.html  index.md  report.html  site.hs  style.css
scripts/: preprocess_docs.py  run_benchmarks.sh  update_bench_tables.sh
src/: HsCallback.hs  HsLinearDemo.hs  HsStub.hs  HsZeroCopy.hs  bench_dgemm.c  bench_overhead.c  ghc_omp_runtime.c  ghc_omp_runtime_rts.c  omp_batch.cmm  omp_compute.c  test_guided.c  test_nested.c
(+53 files in other folders)
