cabal-version: 2.4
name:          ghc-openmp
version:       0.18.0
synopsis:      OpenMP runtime backed by GHC RTS Capabilities
description:
  An OpenMP runtime that uses GHC's Runtime System (RTS) as its thread pool.
  Standard C code compiled with @gcc -fopenmp@ runs on GHC Capabilities
  instead of libgomp's pthreads. The Haskell library compiles the runtime
  with the consumer's own GHC (no shared library linkage, no ABI conflicts).
  For C consumers, build @libghcomp.so@ separately and use the pkg-config
  template in @data/@.
license:       BSD-3-Clause
license-file:  LICENSE
author:        jhhuh
maintainer:    jhhuh
homepage:      https://github.com/jhhuh/ghc-openmp
bug-reports:   https://github.com/jhhuh/ghc-openmp/issues
category:      Concurrency, FFI
data-dir:      data
data-files:    ghcomp.pc.in

library
  exposed-modules:  GHC.OpenMP
  other-modules:    Paths_ghc_openmp
  autogen-modules:  Paths_ghc_openmp
  hs-source-dirs:   lib
  c-sources:        cbits/ghc_omp_runtime_rts.c
  cc-options:       -DTHREADED_RTS -O2
  ghc-options:      -threaded
  build-depends:    base >= 4.14 && < 5
  default-language: Haskell2010
