cabal-version: 2.4
name:          inline-cmm-demo
version:       0.1.0.0
synopsis:      Demo of inline-cmm quasiquoter for GHC Cmm primitives
license:       BSD-3-Clause

-- Phase 11: inline-cmm quasiquoter demo
-- Demonstrates writing Cmm primitives inline in Haskell
executable inline-cmm-demo
  main-is:          HsInlineCmm.hs
  hs-source-dirs:   ../../src
  ghc-options:      -threaded -O2
  build-depends:
    base >= 4.14 && < 5,
    inline-cmm,
    ghc-prim
  default-language: Haskell2010
